--- a/main/templates/main/master_home.html
+++ b/main/templates/main/master_home.html
@@ -35,9 +35,12 @@
                                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
                                                     شركة الأبحاث
                                                 </th>
-                                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                    الأرباح الفعلية
+                                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                                    توقعات الأرباح
+                                                </th>
 
+                                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                    توقعات الأرباح
                                                 </th>
 
                                                 <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
@@ -68,71 +71,36 @@
                                                             </div>
                                                         </div>
                                                     </td>
+                                                    <td>
+                                                        <div class="d-flex px-2 py-1">
+
+                                                            <div class="d-flex flex-column justify-content-center">
+                                                                <h6 class="mb-0 text-sm">{{ item.expectvalue }}</h6>
+                                                            </div>
+                                                        </div>
+                                                    </td>
                                                     <td class="d-flex flex-column align-middle text-center text-sm">
-                                                                              <table class="table align-items-center mb-0">
-                            <thead>
-                                <tr>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">الشركة المدرجة</th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">شركة الأبحاث</th>
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" >  الأرباح الفعلية</th>
+                                                        <table class="table align-items-center mb-0">
+                                                            <thead>
+                                                            <tr>
+                                                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                    السنه
+                                                                </th>
+                                                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                                                    الربع
+                                                                </th>
+                                                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                    الأرباح الفعلية
+                                                                </th>
 
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">اسم المحلل</th>
-                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">المرفق</th>
-                                    <th class="text-secondary opacity-7"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                             {% for item in expectations %}
-                              <tr>
-                                        <td>
-                                            <div class="d-flex px-2 py-1">
-
-                                                <div class="d-flex flex-column justify-content-center">
-                                                    <h6 class="mb-0 text-sm">{{ item.CompanyEntered.name }}</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                 <td>
-                                            <div class="d-flex px-2 py-1">
-
-                                                <div class="d-flex flex-column justify-content-center">
-                                                    <h6 class="mb-0 text-sm">{{ item.ResearchCompany.name }}</h6>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="d-flex flex-column align-middle text-center text-sm">
-                                        <table class="table align-items-center mb-0">
-                                                                                       <thead>
-                                                        <tr>
-                                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                السنه
-                                                            </th>
-                                                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
-                                                                الربع
-                                                            </th>
-                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                الأرباح الفعلية
-                                                            </th>
-
-                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                توقعات الأرباح للربع المقابل من العام السابق
-                                                            </th>
-                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                توقعات الأرباح للربع السابق من العام الحالى
-                                                            </th>
-
-                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                مدى الأنحراف عن الربع المقابل من العام السابق
-                                                            </th>
-                                                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                                                مدى الأنحراف عن الربع السابق من العام الحالى
-                                                            </th>
-
-                                                        </tr>
-                                                        </thead>
+                                                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                                                    مدى الأنحراف
+                                                                </th>
+                                                            </tr>
+                                                            </thead>
 
                                                             <tbody>
-                                                            {% for expect in item.expectyear_set.all %}
+                                                            {% for expect in item.expectYear.all %}
                                                                 <tr>
                                                                     <td>
                                                                         <p class="text-xs font-weight-bold mb-0">{{ expect.year }}</p>
@@ -143,52 +111,17 @@
                                                                     <td>
                                                                         <p class="text-xs font-weight-bold mb-0">{{ expect.value }}</p>
                                                                     </td>
-                                                                    <td>
-                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.ExpectPervYear }}</p>
-                                                                    </td>
-                                                                    <td>
-                                                                        <p class="text-xs font-weight-bold mb-0">{{ expect.ExpectthisYear }}</p>
-                                                                    </td>
                                                                     <td class="align-middle text-center">
-                                                                        {% if expect.DeviationRangePastYear < 0 %}
-                                                                            <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRangePastYear|floatformat:-2 }} %</span>
+                                                                        {% if expect.deviation_range < 0 %}
+                                                                            <span class="text-danger text-lg font-weight-bold">{{ expect.deviation_range|floatformat:-2 }} %</span>
                                                                         {% else %}
-                                                                            <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRangePastYear|floatformat:-2 }} %</span>
-                                                                        {% endif %}
-                                                                    </td>
-                                                                    <td class="align-middle text-center">
-                                                                        {% if expect.DeviationRangeThisYear < 0 %}
-                                                                            <span class="text-danger text-lg font-weight-bold">{{ expect.DeviationRangeThisYear|floatformat:-2 }} %</span>
-                                                                        {% else %}
-                                                                            <span class="text-success text-lg font-weight-bold">{{ expect.DeviationRangeThisYear|floatformat:-2 }} %</span>
+                                                                            <span class="text-success text-lg font-weight-bold">{{ expect.deviation_range|floatformat:-2 }} %</span>
                                                                         {% endif %}
                                                                     </td>
                                                                 </tr>
                                                             {% endfor %}
                                                             </tbody>
-                                        </table>
-
-                                        </td>
-                                        <td>
-                                            <p class="text-xs font-weight-bold mb-0">{{ item.analyst.name }}</p>
-                                        </td>
-                                        <td>
-                                            <a href="{{ item.report.url }}">
-                                                <p class="text-xs font-weight-bold mb-0"><i class="far fa-file-pdf maal-yello"></i></p>
-                                            </a>
-                                        </td>
-                                        <td class="ms-auto text-start">
-                                            <a class="btn btn-link text-dark px-3 mb-0" href=""><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
-
-                                        </td>
-
-
-                                    </tr>
-                               {% endfor %}
-
-                            </tbody>
-                        </table>
-
+                                                        </table>
 
                                                     </td>
                                                     <td>
@@ -213,8 +146,6 @@
 
                                             </tbody>
                                         </table>
-
-
                                     </div>
                                 </div>
                                 <div class="card-footer d-flex justify-content-center">
